i adjusted the file pathing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assert/scss/app.css">
+    <link rel="stylesheet" href="assert/scss/app.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Music Library</title>
@@ -51,7 +51,7 @@
                     <h2>Hip hop</h2>
 
                     <div class="box-img">
-                        <img src="/assert/img/BobMarley-Rebel_Music.jpg" alt="">
+                        <img src="assert/img/BobMarley-Rebel_Music.jpg" alt="">
 
                         <div class="bm-text">
                             <span class="alb-name">African Unity</span>.</br>
@@ -91,32 +91,32 @@
 
         <div class="album-wrapper">
              <div class="album">
-                <a href="play.html"><img src="/assert/img/3af0e55ea66ea69e35145fb108b4a636.jpg" alt=""></a>
+                <a href="play.html"><img src="assert/img/3af0e55ea66ea69e35145fb108b4a636.jpg" alt=""></a>
                  <h3>Bite me Kiss me</h3>
                  <h5>Weekend</h5>
              </div>
              <div class="album">
-                <a href="play.html"><img src="/assert/img/8327005_456448965522323319059722665334759077366683n_jpeg5ca78aa59971898c4628bd2c07016ae7.jpeg" alt=""></a>
+                <a href="play.html"><img src="assert/img/8327005_456448965522323319059722665334759077366683n_jpeg5ca78aa59971898c4628bd2c07016ae7.jpeg" alt=""></a>
                 <h3>Olodo school</h3>
                 <h5>YBNL</h5>
             </div>
             <div class="album">
-                <a href="play.html"><img src="/assert/img/shatta-wale-reign-album-download-art.jpeg" alt=""></a>
+                <a href="play.html"><img src="assert/img/shatta-wale-reign-album-download-art.jpeg" alt=""></a>
                 <h3>Be my best friend</h3>
                 <h5>Curtis</h5>
             </div>
             <div class="album">
-                <a href="play.html"><img src="/assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt=""></a>
+                <a href="play.html"><img src="assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt=""></a>
                 <h3>Learn on me</h3>
                 <h5>Maria kate</h5>
             </div>
             <div class="album">
-                <a href="play.html"><img src="/assert/img/PHOTO-2018-10-07-18-33-53-700x684.jpg" alt=""></a>
+                <a href="play.html"><img src="assert/img/PHOTO-2018-10-07-18-33-53-700x684.jpg" alt=""></a>
                 <h3>Poverty casters</h3>
                 <h5>Team yn</h5>
             </div>
             <div class="album">
-                 <a href="play.html"><img src="/assert/img/Tinorado-Lowo-700x700.jpg" alt=""></a>
+                 <a href="play.html"><img src="assert/img/Tinorado-Lowo-700x700.jpg" alt=""></a>
                 <h3>Lowo</h3>
                 <h5>Tinorado</h5>
             </div>
@@ -134,32 +134,32 @@
         </div>
         <div class="album-wrapper">
             <div class="album">
-                <img src="/assert/img/Tinorado-Lowo-700x700.jpg" alt="">
+                <img src="assert/img/Tinorado-Lowo-700x700.jpg" alt="">
                 <h3>Bite me Kiss me</h3>
                 <h5>Weekend</h5>
             </div>
             <div class="album">
-               <img src="/assert/img/brandon-erlinger-ford-MFbOzrcyYTk-unsplash.jpg" alt="">
+               <img src="assert/img/brandon-erlinger-ford-MFbOzrcyYTk-unsplash.jpg" alt="">
                <h3>Olodo school</h3>
                <h5>YBNL</h5>
            </div>
            <div class="album">
-               <img src="/assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt="">
+               <img src="assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt="">
                <h3>Be my best friend</h3>
                <h5>Curtis</h5>
            </div>
            <div class="album">
-               <img src="/assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt="">
+               <img src="assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt="">
                <h3>Learn on me</h3>
                <h5>Maria kate</h5>
            </div>
            <div class="album">
-               <img src="/assert/img/PHOTO-2018-10-07-18-33-53-700x684.jpg" alt="">
+               <img src="assert/img/PHOTO-2018-10-07-18-33-53-700x684.jpg" alt="">
                <h3>Poverty casters</h3>
                <h5>Team yn</h5>
            </div>
            <div class="album">
-               <img src="/assert/img/BobMarley-Rebel_Music.jpg" alt="">
+               <img src="assert/img/BobMarley-Rebel_Music.jpg" alt="">
                <h3>Lowo</h3>
                <h5>Tinorado</h5>
            </div>
@@ -170,7 +170,7 @@
 
     <nav class="navbar">
         
-                <img src="/assert/img/Tinorado-Lowo-700x700.jpg" alt="" id="album">
+                <img src="assert/img/Tinorado-Lowo-700x700.jpg" alt="" id="album">
       
 
         <div class="song-title">
