--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assert/scss/app.css">
+    <link rel="stylesheet" href="assert/scss/app.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Music Library</title>
@@ -40,7 +40,7 @@
         <div class="play">
 
             <div class="play-img">
-                <img src="/assert/img/Tinorado-Lowo-700x700.jpg" alt="" >
+                <img src="assert/img/Tinorado-Lowo-700x700.jpg" alt="" >
             </div>
 
             <div class="title">
