--- a/song.html
+++ b/song.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assert/scss/app.css">
+    <link rel="stylesheet" href="assert/scss/app.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Music Library</title>
@@ -55,7 +55,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/Tinorado-Lowo-700x700.jpg" alt="" id="album">
+                <img src="assert/img/Tinorado-Lowo-700x700.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -66,7 +66,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/BobMarley-Rebel_Music.jpg" alt="" id="album">
+                <img src="assert/img/BobMarley-Rebel_Music.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -77,7 +77,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/brandon-erlinger-ford-MFbOzrcyYTk-unsplash.jpg" alt="" id="album">
+                <img src="assert/img/brandon-erlinger-ford-MFbOzrcyYTk-unsplash.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -88,7 +88,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt="" id="album">
+                <img src="assert/img/ophelia-movie-soundtrack-album-cover-design.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -99,7 +99,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/PHOTO-2018-10-07-18-33-53-700x684.jpg" alt="" id="album">
+                <img src="assert/img/PHOTO-2018-10-07-18-33-53-700x684.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -110,7 +110,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/shatta-wale-reign-album-download-art.jpeg" alt="" id="album">
+                <img src="assert/img/shatta-wale-reign-album-download-art.jpeg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -121,7 +121,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/Tinorado-Lowo-700x700.jpg" alt="" id="album">
+                <img src="assert/img/Tinorado-Lowo-700x700.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -132,7 +132,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/headphones-girl-smartphone.jpg" alt="" id="album">
+                <img src="assert/img/headphones-girl-smartphone.jpg" alt="" id="album">
             </div></a>
 
             <a href="play.html"><div class="songs-item">
@@ -143,7 +143,7 @@
                         <h5>Tinorado</h5>
                     </div>
                 </div>
-                <img src="/assert/img/BobMarley-Rebel_Music.jpg" alt="" id="album">
+                <img src="assert/img/BobMarley-Rebel_Music.jpg" alt="" id="album">
             </div></a>
 
         </div>
